Hacky fixes to colour contrast issues

--- a/public/style.css
+++ b/public/style.css
@@ -26,11 +26,19 @@ body {
   flex: 0 0 283px;
 }
 
+/* Hacks to fix Lighthouse contrast  */
+.product-header .currentPrice span {
+  color: #BB0707 !important;
+}
+
+.soldBy + p {
+  color: #6B6A6A !important;
+}
+
 .review-section {
   display: flex;
   align-items: start;
 }
-
 
 #app {
   margin: 20px;
